Revert "Add a padding to the nav to maybe prevent the scrollbar from bugging out"
This reverts commit 392c4bef1ec99c7ceb8c5c7b15cbc407b5104500.

--- a/src/assets/stylesheets/layout/_nav.scss
+++ b/src/assets/stylesheets/layout/_nav.scss
@@ -28,7 +28,6 @@
 .md-nav {
   font-size: px2rem(14px);
   line-height: 1.3;
-  padding-bottom: 50px;
 
   // List title
   &__title {
